crates/crochet_parser/src/snapshots/crochet_parser__tests__classes-10.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"class Foo { constructor(x) {} }\")"
---
Ok(
    Program {
        body: [
            ClassDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 31,
                    },
                },
                span: 0..31,
                ident: Ident {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 6,
                        },
                        end: Position {
                            line: 0,
                            column: 9,
                        },
                    },
                    span: 6..9,
                    name: "Foo",
                },
                class: Class {
                    ident: Ident {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 6,
                            },
                            end: Position {
                                line: 0,
                                column: 9,
                            },
                        },
                        span: 6..9,
                        name: "Foo",
                    },
                    body: [
                        Constructor(
                            Constructor {
                                params: [
                                    EFnParam {
                                        pat: Pattern {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 24,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 25,
                                                },
                                            },
                                            span: 24..25,
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "x",
                                                    mutable: false,
                                                    span: 24..25,
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 24,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 25,
                                                        },
                                                    },
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        type_ann: None,
                                        optional: false,
                                    },
                                ],
                                body: Expr {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                    },
                                    span: 0..0,
                                    kind: Empty,
                                    inferred_type: None,
                                },
                                type_params: None,
                            },
                        ),
                    ],
                },
            },
        ],
    },
)
