crates/crochet_parser/src/snapshots/crochet_parser__tests__classes-3.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"class Foo { a = 5; }\")"
---
Ok(
    Program {
        body: [
            ClassDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 20,
                    },
                },
                span: 0..20,
                ident: Ident {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 6,
                        },
                        end: Position {
                            line: 0,
                            column: 9,
                        },
                    },
                    span: 6..9,
                    name: "Foo",
                },
                class: Class {
                    ident: Ident {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 6,
                            },
                            end: Position {
                                line: 0,
                                column: 9,
                            },
                        },
                        span: 6..9,
                        name: "Foo",
                    },
                    body: [
                        Prop(
                            ClassProp {
                                key: Ident {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 12,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 13,
                                        },
                                    },
                                    span: 12..13,
                                    name: "a",
                                },
                                value: Some(
                                    Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 16,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 17,
                                            },
                                        },
                                        span: 16..17,
                                        kind: Lit(
                                            Num(
                                                Num {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 16,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 17,
                                                        },
                                                    },
                                                    span: 16..17,
                                                    value: "5",
                                                },
                                            ),
                                        ),
                                        inferred_type: None,
                                    },
                                ),
                                type_ann: None,
                                is_static: false,
                                is_optional: false,
                                is_mutable: false,
                            },
                        ),
                    ],
                    type_params: None,
                },
            },
        ],
    },
)
